<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Tutorial_BlankView"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/Tutorial_TittleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Tutorial_title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Tutorial_StepsView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tutorial_view1" />

            <TextView
                android:id="@+id/Tutorial_StepsView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/Tutorial_view2" />

            <ImageView
                android:id="@+id/Tutorial_StepsIView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/step1" />

            <TextView
                android:id="@+id/Tutorial_StepsView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/Tutorial_view3" />

            <ImageView
                android:id="@+id/Tutorial_StepsIView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/step2" />

            <TextView
                android:id="@+id/Tutorial_StepsView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/Tutorial_view4" />

            <TextView
                android:id="@+id/Tutorial_StepsView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/Tutorial_view5" />

            <ImageView
                android:id="@+id/Tutorial_StepsIView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/step3" />

            <TextView
                android:id="@+id/Tutorial_StepsView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/Tutorial_view6" />

            <ImageView
                android:id="@+id/Tutorial_StepsIView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/step4" />

            <TextView
                android:id="@+id/Tutorial_StepsView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Tutorial_view7" />

            <ImageView
                android:id="@+id/Tutorial_StepsIView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/step5" />

            <TextView
                android:id="@+id/Tutorial_StepsView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:text="@string/Tutorial_view8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Tutorial_StepsView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:text="@string/Tutorial_view9"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
